--- a/css/site.css
+++ b/css/site.css
@@ -69,3 +69,20 @@ h1+p {
     fill: #333;
     font-size: 0.9em;
 }
+
+.container {
+    display: none;
+}
+
+.loader {
+    animation: spin 2s linear infinite;
+    border: 8px solid #f3f3f3; /* Light grey */
+    border-top: 8px solid #3498db; /* Blue */
+    border-radius: 50%;
+    height: 70px;
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    width: 70px;
+}
